reduced copy-paste with AbstractNode and added Assign class for graph visualization